--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,4 +1,6 @@
 sudo: required
+language: generic
+
 services:
   - docker
 
@@ -6,6 +8,7 @@ before_install:
   - docker build -t jtigph/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true USERNAME/docker-react npm run test
-
+  - docker run -e CI=true USERNAME/docker-react npm run test -- --coverage
     
+
+
