--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,9 @@ FROM node:16-alpine
 
 WORKDIR '/app'
 
+## add comments for git pull
+## Date 28/Jan/2022 13:43
+
 COPY --chown=node:node ./package.json ./
 RUN npm install
 COPY --chown=node:node ./ ./
